--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "angular-validation-match": "^1.9.0",
     "babel-polyfill": "^6.7.2",
     "babel-runtime": "^6.6.1",
+    "bluebird": "^3.4.6",
     "body-parser": "^1.13.3",
     "bootstrap": "~3.3.7",
     "bootstrap-social": "^5.0.0",
