--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "angular-ui-router": "~0.3.1",
     "angular-validation-match": "^1.9.0",
     "angularjs-datepicker": "^2.1.17",
+    "angularjs-toaster": "^2.1.0",
     "babel-polyfill": "^6.7.2",
     "babel-runtime": "^6.6.1",
     "bluebird": "^3.4.6",
